--- a/index.html
+++ b/index.html
@@ -71,7 +71,15 @@
         <!-- /.container -->
     </nav>
 
-    <div class="row">
+        <!-- Student Profile-->
+
+
+    <!-- Intro Header -->
+    <header class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="well well-sm">
                 <div class="row">
@@ -109,12 +117,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Intro Header -->
-    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Grayscale</h1>
                         <p class="intro-text">A free, responsive, one page Bootstrap theme.
